fix tweet page comment overflow

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -759,6 +759,7 @@ html, body {
   border-bottom: 1px solid #E6ECF0;
   display: flex;
   flex-flow: row nowrap;
+  padding-right: 15px;
 }
 
 .main > .replies > .reply > a {
@@ -811,10 +812,9 @@ html, body {
   font-weight: 400;
   line-height: 22px;
   max-height: 44px;
-  width: 100%;
-  padding-right: 10px;
+  max-width: 510px;
   overflow: scroll;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: auto;
 }
 
